# paraphase

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/cambium/: Cargo.toml
crates/cambium-audio/: Cargo.toml
crates/cambium-audio/src/: lib.rs
crates/cambium-cli/: Cargo.toml
crates/cambium-cli/src/: main.rs
crates/cambium-cli/tests/: integration.rs
crates/cambium-image/: Cargo.toml
crates/cambium-image/src/: lib.rs
crates/cambium-plugin/: Cargo.toml
crates/cambium-plugin/src/: lib.rs
crates/cambium-serde/: Cargo.toml
crates/cambium-serde/src/: lib.rs
crates/cambium-video/: Cargo.toml
crates/cambium-video/src/: lib.rs  transcode.rs
crates/cambium/src/: converter.rs  executor.rs  lib.rs  planner.rs  properties.rs  registry.rs
crates/paraphase-3d/: Cargo.toml
crates/paraphase-3d/src/: lib.rs
crates/paraphase-audio/: Cargo.toml
crates/paraphase-audio/src/: lib.rs
crates/paraphase-cli/: Cargo.toml
crates/paraphase-cli/src/: config.rs  errors.rs  expr.rs  main.rs
crates/paraphase-cli/tests/data/: batch1.json  chain_test.json  roundtrip_input.json  test2.yaml
crates/paraphase-cli/tests/data/tree_test/: root.json
crates/paraphase-cli/tests/data/tree_test/subdir/: nested.json
crates/paraphase-color/: Cargo.toml
crates/paraphase-color/src/: lib.rs
crates/paraphase-core/: Cargo.toml
crates/paraphase-font/: Cargo.toml
crates/paraphase-font/src/: lib.rs
crates/paraphase-geo/: Cargo.toml
crates/paraphase-geo/src/: lib.rs
crates/paraphase-image/: Cargo.toml
crates/paraphase-image/src/: lib.rs
crates/paraphase-pki/: Cargo.toml
crates/paraphase-pki/src/: lib.rs
crates/paraphase-plugin/: Cargo.toml
crates/paraphase-plugin/src/: lib.rs
crates/paraphase-serde/: Cargo.toml
crates/paraphase-serde/src/: lib.rs
crates/paraphase-subtitle/: Cargo.toml
crates/paraphase-subtitle/src/: lib.rs
crates/paraphase-vector/: Cargo.toml
crates/paraphase-vector/src/: lib.rs
crates/paraphase-video/: Cargo.toml
crates/paraphase-video/src/: lib.rs  transcode.rs
docs/: architecture-decisions.md  formats.md  index.md  open-questions.md  philosophy.md  quickstart.md  use-cases.md  workflow-api.md
docs/.vitepress/: config.ts
