[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhizome-labs/cambium"

[workspace.dependencies]
# Internal
cambium = { path = "crates/cambium" }
cambium-plugin = { path = "crates/cambium-plugin" }
cambium-serde = { path = "crates/cambium-serde" }
cambium-image = { path = "crates/cambium-image" }
cambium-video = { path = "crates/cambium-video" }
cambium-audio = { path = "crates/cambium-audio" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"

# Collections
indexmap = { version = "2", features = ["serde"] }
