[package]
name = "cambium-video"
description = "Video format converters for Cambium"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["mp4", "webm", "gif"]

# Container formats
mp4 = []
webm = []
mkv = []
avi = []
mov = []

# Animated image bridge
gif = []

# Audio extraction
audio = []

# All formats
all = ["mp4", "webm", "mkv", "avi", "mov", "gif", "audio"]

[dependencies]
cambium.workspace = true
indexmap = "2"
ffmpeg-next = "8"
