[package]
name = "paraphase-cli"
description = "CLI for Paraphase data transformation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "paraphase"
path = "src/main.rs"

[features]
default = ["serde", "image"]

# Converter backends
serde = ["dep:paraphase-serde"]
image = ["dep:paraphase-image", "dep:image"]
video = ["dep:paraphase-video"]
audio = ["dep:paraphase-audio"]
vector = ["dep:paraphase-vector"]
font = ["dep:paraphase-font"]
geo = ["dep:paraphase-geo"]
pki = ["dep:paraphase-pki"]
subtitle = ["dep:paraphase-subtitle"]
color = ["dep:paraphase-color"]

# Enable all formats in each backend
serde-all = ["serde", "paraphase-serde/all"]
image-all = ["image", "paraphase-image/all"]
video-all = ["video", "paraphase-video/all"]
audio-all = ["audio", "paraphase-audio/all"]
vector-all = ["vector", "paraphase-vector/all"]
font-all = ["font", "paraphase-font/all"]
geo-all = ["geo", "paraphase-geo/all"]
pki-all = ["pki", "paraphase-pki/all"]
subtitle-all = ["subtitle", "paraphase-subtitle/all"]
color-all = ["color", "paraphase-color/all"]

# Parallel execution (batch processing)
parallel = ["paraphase-core/parallel"]

# Dynamic expressions in presets (via Wick)
wick = ["dep:wick-core", "dep:wick-scalar"]

# Everything (video excluded from default, requires FFmpeg)
all = [
    "serde-all", "image-all", "video-all", "audio-all",
    "vector-all", "font-all", "geo-all", "pki-all", "subtitle-all", "color-all",
    "parallel", "wick",
]

[dependencies]
paraphase-core.workspace = true
paraphase-serde = { workspace = true, optional = true }
paraphase-image = { workspace = true, optional = true }
paraphase-video = { workspace = true, optional = true }
paraphase-audio = { workspace = true, optional = true }
paraphase-vector = { workspace = true, optional = true }
paraphase-font = { workspace = true, optional = true }
paraphase-geo = { workspace = true, optional = true }
paraphase-pki = { workspace = true, optional = true }
paraphase-subtitle = { workspace = true, optional = true }
paraphase-color = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
indicatif = "0.17"
pure-magic = "0.1"
magic-db = "0.3"
anyhow = "1"
indexmap = "2"
image = { version = "0.25", default-features = false, optional = true }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "6"
glob = "0.3"
walkdir = "2"

# Wick expression language (optional)
wick-core = { version = "0.1.0", features = ["cond", "func"], optional = true }
wick-scalar = { version = "0.1.0", optional = true }
